
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">GDG Finder</string>
    <string name="app_name_bold" formatted="false">
        <![CDATA[
            <font color="%s"><b>GDG</b></font><br/><font color="%s">Finder</font>
        ]]>
    </string>
    <string name="app_title">GDG</string>
    <string name="app_author">© Maxeem America, 2019</string>
    <string name="app_description" formatted="false" tools:ignore="TypographyDashes">
        <![CDATA[
            Made by taking <a href="https://www.udacity.com/course/developing-android-apps-with-kotlin--ud9012">Udacity course</a>
            <br/><br/>
            App <a href="https://github.com/maxeema/andfun-kotlin-gdg-finder/tree/work">GitHub page</a>
        ]]>
    </string>
    <string name="author_email">Maxeem.America@gmail.com</string>
    <string name="email_subject">Hello Max! From \"%s\" app.</string>
    <string name="app_on_google_play">See on Google Play</string>
    <string name="about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_gdg">
        Could not find a GDG in your region? Go ahead and start one!
    </string>

    <string name="gdg_search">GDG Search</string>
    <string name="gdg_apply">Apply to run GDG</string>
    <string name="gdgs_are">GDGs Are…</string>
    <string name="gdg_description_long">
        GDGs are local groups of developers who are specifically interested in Google products and APIs.
        \n\nEach local group is called a GDG chapter and can host a variety of technical activities for
        developers - from just a few people getting together to watch our latest videos, to large gatherings with demos
        and tech talks, to Hackathons.
        \n\nGoogle Developers supports and recognizes GDG chapters, but doesn\'t own or manage them.
    </string>
    <string name="about_google_developer_groups">Google Developer Groups</string>
    <string name="gdg_description_bullets">
        ️Run by passionate individuals in local developer communities.\n\n
        ️∙ A group to share ideas and network with fellow developers\n\n
        ∙ ️A place to learn about Google technologies and development tools\n\n
        Open to and free for all interested.\n
    </string>
    <string name="waiting_for_location_and_network">Waiting for location \n&amp;\n network result…</string>
    <string name="stage_image_description">Photo from stage from a DevFest</string>
    <string name="submit_button_description">Button to submit form</string>
    <string name="motivation">Tell us a bit more about why do you want to start a GDG</string>
    <string name="your_name_label">Your name</string>
    <string name="email_label">Email</string>
    <string name="city_label">City</string>
    <string name="country_label">Country</string>
    <string name="region_label">Region</string>
    <string name="enter_motivation">Your motivation in 1–2 sentences</string>
    <string name="submitted">Submitted, no need to submit again</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="okay">OK</string>
    <string name="no_location_msg">Location is not available.\nPlease, enable location in Settings!</string>

    <string name="application_submitted">Great! We are pretending that the form was applied and sent =)</string>
    <string name="field_must_not_be_empty">must not be empty</string>
    <string name="field_is_not_valid">not valid</string>
    <string name="fill_first">Please, fill the form first!</string>
    <string name="thank_you">Thank you!</string>
    <string name="demo_be_aware">This is a demo form. Visit the website for an original apply.</string>

    <string name="no_connection_tap">Can\'t connect. Check Internet.\nTap icon to retry.</string>
    <string name="some_error_tap">Some error. Details in logs.\nTap icon to retry.</string>

    <string name="global">Global</string>
    <string name="gdg_global">GDG Global</string>
    <string name="where_search">%s Search</string>
    <string name="gdg_in">GDG in %s</string>
    <string name="empty_gdg_search">"Didn't find a GDG in your region?\nTap button to apply new."</string>
    <string name="apply">Apply</string>

</resources>
