<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">

    <data>
        <variable name="viewModel" type="maxeem.america.gdg.viewmodels.HomeViewModel"/>
    </data>

    <LinearLayout android:orientation="vertical"
        android:background="@color/windowBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:menu="@menu/home_menu">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_gdg" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/app_name"
                    android:tint="?colorOnSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?colorOnBackground"
                    app:srcCompat="@drawable/gdg_finder" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                app:liftOnScroll="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:theme="@style/HomeTitle"
                    android:id="@+id/colToolbar"
                    app:title="@string/about_google_developer_groups"
                    app:expandedTitleTextAppearance="?textAppearanceHeadline6"
                    app:collapsedTitleTextAppearance="?textAppearanceHeadline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expandedTitleGravity="start|top"
                    app:collapsedTitleGravity="start|top"
                    app:expandedTitleMarginTop="15dp"
                    app:contentScrim="@color/titleScrim"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                    <ViewFlipper
                        android:inAnimation="@android:anim/fade_in"
                        android:outAnimation="@android:anim/fade_out"
                        android:autoStart="true"
                        android:flipInterval="@integer/img_flipping_interval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier=".5">

                        <include layout="@layout/home_gallery"/>

                    </ViewFlipper>

                    <com.google.android.material.appbar.MaterialToolbar
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        app:layout_collapseMode="pin" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="40dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/spacing_normal"
                    android:paddingBottom="80dp">

                    <TextView
                        android:id="@+id/intro_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/gdg_description_long"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintEnd_toStartOf="@+id/end_grid"
                        app:layout_constraintStart_toStartOf="@+id/start_grid"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:textAppearance="?textAppearanceHeadline6"
                        android:id="@+id/subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/gdgs_are"
                        app:layout_constraintEnd_toStartOf="@id/end_grid"
                        app:layout_constraintStart_toEndOf="@id/start_grid"
                        app:layout_constraintTop_toBottomOf="@+id/intro_text" />

                    <TextView
                        android:textAppearance="?textAppearanceBody2"
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gdg_description_bullets"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/subtitle"
                        app:layout_constraintStart_toStartOf="@+id/start_grid"
                        app:layout_constraintEnd_toStartOf="@+id/end_grid"/>

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/start_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintGuide_begin="@dimen/spacing_normal"
                        android:orientation="vertical"/>

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/end_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/spacing_normal" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{ ()-> viewModel.onFabClicked() }"
                tooltip="@{ @string/gdg_search }"
                extended="@{ false }"
                tools:extended="false"
                app:icon="@drawable/ic_gdg"
                android:text="@string/gdg_search"
                android:layout_margin="24dp"
                android:layout_gravity="bottom|end"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

</layout>


